--- a/.github/workflows/build_features.yml
+++ b/.github/workflows/build_features.yml
@@ -42,18 +42,13 @@ jobs:
           ref: ${{github.base_url}}
           fetch-depth: 0
 
-      - name: Debug
-        run: |
-          echo "GIT_USER_NAME: ${{ secrets.GIT_USER_NAME }}"
-          echo "GIT_USER_EMAIL: ${{ secrets.GIT_USER_EMAIL }}"
-  
 
       - name: Merge to Main
         if: ${{ success() }}
         run: |
-          git config --global user.name "alegonzalezz"
-          git config --global user.email "gonzalezalejandro1592@gmail.com"
-          git merge --no-ff -verbose origin/${{ github.event.pull_request.head.ref }} -m 'Merge pull request -${{github.event.number}}'
+          git config --global user.name "${{ secrets.GIT_USER_NAME }}"
+          git config --global user.email "${{ secrets.GIT_USER_EMAIL }}"
+          git merge --no-ff --verbose origin/${{ github.event.pull_request.head.ref }} -m 'Merge pull request -${{github.event.number}}'
 
 
       - name: Push changes after merge
