change java name

--- a/.github/workflows/build_features.yml
+++ b/.github/workflows/build_features.yml
@@ -45,8 +45,8 @@ jobs:
       - name: Run EM Driver
         if: ${{ success() }}
         run: |
-          javac Main.java
-          java Main
+          javac EMDriver.java
+          java EMDriver
 
 
       - name: Run evomaster
