--- a/.github/workflows/build_features.yml
+++ b/.github/workflows/build_features.yml
@@ -44,10 +44,7 @@ jobs:
 
       - name: Run EM Driver
         if: ${{ success() }}
-        run: |
-          javac ./src/test/java/org/example/EMDriver.java
-          java EMDriver
-
+        run: mvn clean compile exec:java -Dexec.mainClass="org.example.EMDriver"
 
       - name: Run evomaster
         if: ${{ success() }}
