--- a/.github/workflows/build_features.yml
+++ b/.github/workflows/build_features.yml
@@ -44,7 +44,9 @@ jobs:
 
       - name: Run EM Driver
         if: ${{ success() }}
-        run: java -cp target/test-classes org.example.EMDriver
+        run: |
+          mvn clean install
+          java -cp target/test-classes/org/example EMDriver
 
       - name: Run evomaster
         if: ${{ success() }}
