--- a/.github/workflows/build_features.yml
+++ b/.github/workflows/build_features.yml
@@ -42,6 +42,9 @@ jobs:
           ref: ${{github.base_url}}
           fetch-depth: 0
 
+      - name: MVN
+        run: mvn install
+
       - name: LS TARGET
         run: ls -R   
 
