--- a/.github/workflows/build_features.yml
+++ b/.github/workflows/build_features.yml
@@ -50,7 +50,7 @@ jobs:
 
       - name: Run EM Driver
         if: ${{ success() }}
-        run: java -cp ./target/test-classes/org/example EMDriver.class
+        run: java -cp /target/test-classes org.example.EMDriver
 
       - name: Run evomaster
         if: ${{ success() }}
