--- a/.github/workflows/build_features.yml
+++ b/.github/workflows/build_features.yml
@@ -45,12 +45,9 @@ jobs:
       - name: MVN
         run: mvn install
 
-      - name: LS TARGET
-        run: ls -R   ./target/test-classes/org/example
-
       - name: Run EM Driver
         if: ${{ success() }}
-        run: java -cp /target/test-classes org.example.EMDriver
+        run: exec:java
 
       - name: Run evomaster
         if: ${{ success() }}
