--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,14 @@
                     <mainClass>org.example.EMDriver</mainClass>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.1.0</version>
+                <configuration>
+                    <mainClass>org.evomaster.EMDriver</mainClass>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
