--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
     <version>1.0.0-SNAPSHOT</version>
 
     <properties>
+        <java.version>17</java.version>
         <version.spring>2.3.3.RELEASE</version.spring>
     </properties>
 
@@ -66,18 +67,33 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>11</source>
+                    <target>11</target>
                     <mainClass>org.example.EMDriver</mainClass>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
-                <version>3.1.0</version>
-                <configuration>
-                    <mainClass>org.evomaster.EMDriver</mainClass>
-                </configuration>
+                <version>3.1.1</version>
+                <executions>
+                    <execution>
+                        <id>default-cli</id>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                        <configuration>
+                            <mainClass>org.evomaster.EMDriver</mainClass>
+                            <executable>java</executable>
+                            <systemProperties>
+                                <systemProperty>
+                                    <key>jdk.attach.allowAttachSelf</key>
+                                    <value>true</value>
+                                </systemProperty>
+                            </systemProperties>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
