--- a/pom.xml
+++ b/pom.xml
@@ -76,24 +76,16 @@
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>3.1.1</version>
-                <executions>
-                    <execution>
-                        <id>default-cli</id>
-                        <goals>
-                            <goal>java</goal>
-                        </goals>
-                        <configuration>
-                            <mainClass>org.evomaster.EMDriver</mainClass>
-                            <executable>java</executable>
-                            <systemProperties>
-                                <systemProperty>
-                                    <key>jdk.attach.allowAttachSelf</key>
-                                    <value>true</value>
-                                </systemProperty>
-                            </systemProperties>
-                        </configuration>
-                    </execution>
-                </executions>
+                     <configuration>
+                        <executable>java</executable>
+                        <arguments>
+                            <argument>-classpath</argument>
+                            <!-- automatically creates the classpath using all project dependencies,
+                                also adding the project build directory -->
+                            <classpath/>
+                            <argument>org.evomaster.EMDriver</argument>
+                        </arguments>
+                    </configuration>
             </plugin>
         </plugins>
     </build>
