--- a/.github/workflows/build_features.yml
+++ b/.github/workflows/build_features.yml
@@ -12,10 +12,10 @@ jobs:
         with:
           ref: ${{github.event.pull_request.head.sha}}
 
-      - name: Set up JDK 8
-        uses: actions/setup-java@v4
+      - uses: actions/checkout@v2
+      - name: Set up JDK 1.8
+        uses: joschi/setup-jdk@v2
         with:
-          distribution: 'zulu'
           java-version: '8'
 
       - name: Cache Maven dependencies
