--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,8 @@
 
     <properties>
         <version.spring>2.3.3.RELEASE</version.spring>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 
 
