--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,9 @@
     <version>1.0.0-SNAPSHOT</version>
 
     <properties>
-        <java.version>17</java.version>
-        <version.spring>2.3.3.RELEASE</version.spring>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
+        <version.spring>2.3.3.RELEASE</version.spring>
     </properties>
 
 
@@ -62,15 +61,15 @@
 
 
 
-    <build>
+  <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>11</source>
-                    <target>11</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                     <mainClass>org.example.EMDriver</mainClass>
                 </configuration>
             </plugin>
@@ -78,26 +77,17 @@
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>3.1.1</version>
-                <executions>
-                    <execution>
-                        <id>default-cli</id>
-                        <goals>
-                            <goal>java</goal>
-                        </goals>
-                        <configuration>
-                            <mainClass>org.evomaster.EMDriver</mainClass>
-                            <executable>java</executable>
-                            <systemProperties>
-                                <systemProperty>
-                                    <key>jdk.attach.allowAttachSelf</key>
-                                    <value>true</value>
-                                </systemProperty>
-                            </systemProperties>
-                        </configuration>
-                    </execution>
-                </executions>
+                     <configuration>
+                        <executable>java</executable>
+                        <arguments>
+                            <argument>-classpath</argument>
+                            <!-- automatically creates the classpath using all project dependencies,
+                                also adding the project build directory -->
+                            <classpath/>
+                            <argument>org.evomaster.EMDriver</argument>
+                        </arguments>
+                    </configuration>
             </plugin>
         </plugins>
     </build>
-
 </project>
