--- a/.github/workflows/build_features.yml
+++ b/.github/workflows/build_features.yml
@@ -14,10 +14,11 @@ jobs:
         with:
           ref: ${{github.event.pull_request.head.sha}}
 
+      - uses: actions/checkout@v2
       - name: Set up JDK 1.8
-        uses: actions/setup-java@v2
+        uses: joschi/setup-jdk@v2
         with:
-          java-version: '1.8'
+          java-version: '8'
 
       - name: Cache Maven dependencies
         uses: actions/cache@v2
