--- a/.github/workflows/build_features.yml
+++ b/.github/workflows/build_features.yml
@@ -15,9 +15,10 @@ jobs:
           ref: ${{github.event.pull_request.head.sha}}
 
       - name: Set up JDK 1.8
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v4
         with:
-          java-version: '1.8'
+          distribution: 'temurin' 
+          java-version: '8'
 
       - name: Cache Maven dependencies
         uses: actions/cache@v2
