--- a/.github/workflows/build_features.yml
+++ b/.github/workflows/build_features.yml
@@ -24,7 +24,7 @@ jobs:
         run: |
           java -version
           mvn -v 
-          
+
       - name: Cache Maven dependencies
         uses: actions/cache@v2
         with:
@@ -51,6 +51,12 @@ jobs:
       - name: Set JDK_JAVA_OPTIONS
         run: echo "export JDK_JAVA_OPTIONS=\"-Djdk.attach.allowAttachSelf=true\"" >> $GITHUB_ENV
         
+      - uses: actions/checkout@v2
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin' 
+          java-version: '8'
       - name: VERSIONS
         run: |
           java -version
