change run build and test with java agent

--- a/.github/workflows/build_features.yml
+++ b/.github/workflows/build_features.yml
@@ -63,12 +63,24 @@ jobs:
           mvn -v 
           
       - name: Build and test with JavaAgent
-        run: mvn clean compile exec:exec -X
+        run: |
+           mvn clean compile exec:exec -X &
+           
+           echo "processIf $PID"
+           PID=$!
+           sleep 10
 
-      - name: Run evomaster
-        if: ${{ success() }}
-        run:  java -jar .\evomaster.jar --blackBox true --bbSwaggerUrl https://api.apis.guru/v2/openapi.yaml  --outputFormat JAVA_JUNIT_4 --maxTime 30s --ratePerMinute 60
-      
+
+           echo "Run evomaster"
+           
+
+           java -jar .\evomaster.jar --blackBox true --bbSwaggerUrl https://api.apis.guru/v2/openapi.yaml  --outputFormat JAVA_JUNIT_4 --maxTime 30s --ratePerMinute 60
+
+           echo "kill processId $PID"
+           kill $PID
+
+
+     
       
       - name: Merge to Main
         if: ${{ success() }}
