check chmod jar

--- a/.github/workflows/build_features.yml
+++ b/.github/workflows/build_features.yml
@@ -63,6 +63,9 @@ jobs:
           mvn -v 
           
       
+      - name: LSLA
+        run: ls -la
+
       - name: permisos evo master
         run: chmod +rx .evomaster.jar
 
