--- a/.github/workflows/build_features.yml
+++ b/.github/workflows/build_features.yml
@@ -51,12 +51,13 @@ jobs:
       - name: Set JDK_JAVA_OPTIONS
         run: echo "export JDK_JAVA_OPTIONS=\"-Djdk.attach.allowAttachSelf=true\"" >> $GITHUB_ENV
         
-      - uses: actions/checkout@v2
       - name: Set up JDK 1.8
         uses: actions/setup-java@v4
         with:
           distribution: 'temurin' 
           java-version: '8'
+
+          
       - name: VERSIONS
         run: |
           java -version
@@ -64,7 +65,9 @@ jobs:
           
       
       - name: LSLA
-        run: ls -la
+        run: |
+          pwd
+          ls -la
 
       - name: permisos evo master
         run: chmod +rx .evomaster.jar
