--- a/.github/workflows/build_features.yml
+++ b/.github/workflows/build_features.yml
@@ -82,7 +82,7 @@ jobs:
         
       - name: Run evomaster
         if: ${{ success() }}
-        run:  java -jar .\evomaster.jar --blackBox true --bbSwaggerUrl https://api.apis.guru/v2/openapi.yaml  --outputFormat JAVA_JUNIT_4 --maxTime 30s --ratePerMinute 60
+        run:  java -jar ./evomaster.jar --blackBox true --bbSwaggerUrl https://api.apis.guru/v2/openapi.yaml  --outputFormat JAVA_JUNIT_4 --maxTime 30s --ratePerMinute 60
       
       
       - name: Merge to Main
