--- a/.github/workflows/build_features.yml
+++ b/.github/workflows/build_features.yml
@@ -80,14 +80,9 @@ jobs:
 
            sleep 10
         
-
-           java -jar ./evomaster.jar --blackBox true --bbSwaggerUrl https://api.apis.guru/v2/openapi.yaml  --outputFormat JAVA_JUNIT_4 --maxTime 30s --ratePerMinute 60
-
-           
-
       - name: Run evomaster
         if: ${{ success() }}
-        run:  java -jar ./evomaster.jar --blackBox true --bbSwaggerUrl https://api.apis.guru/v2/openapi.yaml  --outputFormat JAVA_JUNIT_4 --maxTime 30s --ratePerMinute 60
+        run:  java -jar ./evomaster.jar --blackBox true --outputFormat JAVA_JUNIT_4 --maxTime 20s --ratePerMinute 60
       
       
       - name: Merge to Main
