--- a/.github/workflows/build_features.yml
+++ b/.github/workflows/build_features.yml
@@ -6,36 +6,6 @@ on:
     types: [opened, reopened]
 
 jobs:
-  build-feature:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          ref: ${{github.event.pull_request.head.sha}}
-
-      - uses: actions/checkout@v2
-      - name: Set up JDK 1.8
-        uses: actions/setup-java@v4
-        with:
-          distribution: 'temurin' 
-          java-version: '8'
-      - name: VERSIONS
-        run: |
-          java -version
-          mvn -v 
-
-      - name: Cache Maven dependencies
-        uses: actions/cache@v2
-        with:
-          path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles( '**/pom.xml' ) }}
-          restore-keys: ${{runner.os}}-maven
-
-      - name: MVN Compile
-        run: |
-          mvn clean compile
-
   merge-feature-into-main:
     runs-on: ubuntu-latest
     needs: build-feature
@@ -69,7 +39,7 @@ jobs:
 
       - name: Build and test with JavaAgent
         run: |
-           mvn clean compile exec:exec -X 
+           mvn clean compile exec:exec -X  | java -jar ./evomaster.jar
            
       - name: Run evomaster
         if: ${{ success() }}
