--- a/.github/workflows/build_features.yml
+++ b/.github/workflows/build_features.yml
@@ -32,8 +32,15 @@ jobs:
 
            sleep 10
            
+      - name: Obtener una configuración aleatoria
+        id: obtener-configuracion
+        run: |
+          CONFIGURACION=$(shuf -n 1 .prueba)
+          echo "Configuración seleccionada: $CONFIGURACION"
+          echo "::set-output name=configuracion::$CONFIGURACION"
+
       - name: Run evomaster
         if: ${{ success() }}
-        run:  java -jar ./evomaster.jar  --blackBox true --bbSwaggerUrl https://api.apis.guru/v2/openapi.yaml  --outputFormat JAVA_JUNIT_4 --maxTime 30s --ratePerMinute 60 --feedbackDirectedSampling LAST --maxSqlInitActionsPerMissingData 5 --probOfApplySQLActionToCreateResources 0.5 --probOfRandomSampling 0.5  --focusedSearchActivationTime 0.5 --baseTaintAnalysisProbability 0.9
+        run:  java -jar ./evomaster.jar  --blackBox true --bbSwaggerUrl https://api.apis.guru/v2/openapi.yaml  --outputFormat JAVA_JUNIT_4 --maxTime 30s --ratePerMinute 60 ${{ steps.obtener-configuracion.outputs.configuracion }}
       
      
