--- a/.github/workflows/build_features.yml
+++ b/.github/workflows/build_features.yml
@@ -31,37 +31,6 @@ jobs:
            PID=$!
 
            sleep 10
-           
-      - name: Obtener una configuración aleatoria
-        id: obtener-configuracion
-        run: |
-          CONFIGURACION=$(shuf -n 1 .feedbackDirectedSampling)
-          echo "Configuración seleccionada: $CONFIGURACION"
-          echo "::set-output name=feedbackDirectedSampling::$CONFIGURACION"
-
-          CONFIGURACION=$(shuf -n 1 .probOfApplySQLActionToCreateResources)
-          echo "Configuración seleccionada: $CONFIGURACION"
-          echo "::set-output name=probOfApplySQLActionToCreateResources::$CONFIGURACION"
-          
-          CONFIGURACION=$(shuf -n 1 .probOfRandomSampling)
-          echo "Configuración seleccionada: $CONFIGURACION"
-          echo "::set-output name=probOfRandomSampling::$CONFIGURACION"
-          
-          CONFIGURACION=$(shuf -n 1 .baseTaintAnalysisProbability)
-          echo "Configuración seleccionada: $CONFIGURACION"
-          echo "::set-output name=baseTaintAnalysisProbability::$CONFIGURACION"
-
-          CONFIGURACION=$(shuf -n 1 .focusedSearchActivationTime)
-          echo "Configuración seleccionada: $CONFIGURACION"
-          echo "::set-output name=focusedSearchActivationTime::$CONFIGURACION"
-      - name: Run evomaster
-        if: ${{ success() }}
-        run: |
-          echo "feedbackDirectedSampling ${{ steps.obtener-configuracion.outputs.feedbackDirectedSampling }}"
-          echo "probOfApplySQLActionToCreateResources ${{ steps.obtener-configuracion.outputs.probOfApplySQLActionToCreateResources }}"
-          echo "probOfRandomSampling ${{ steps.obtener-configuracion.outputs.probOfRandomSampling }}"
-          echo "baseTaintAnalysisProbability ${{ steps.obtener-configuracion.outputs.baseTaintAnalysisProbability }}"
-          echo "focusedSearchActivationTime ${{ steps.obtener-configuracion.outputs.focusedSearchActivationTime }}"
-      ## run:  java -jar ./evomaster.jar  --blackBox true --bbSwaggerUrl https://api.apis.guru/v2/openapi.yaml  --outputFormat JAVA_JUNIT_4 --maxTime 30s --ratePerMinute 60 ${{ steps.obtener-configuracion.outputs.configuracion }}
       
-     
+      - name: Run Action 2
+        uses: alegonzalezz/evomaste_script@v1.0.0
