--- a/.github/workflows/build_features.yml
+++ b/.github/workflows/build_features.yml
@@ -31,6 +31,16 @@ jobs:
            PID=$!
 
            sleep 10
-      
+           
       - name: Run Action 2
+        id: run-migrated-script
         uses: alegonzalezz/evomaste_script@v1.0.2
+
+      - name: show variables
+      run: |
+          echo "1) feedbackDirectedSampling: ${{ steps.run-migrated-script.outputs.feedbackDirectedSampling }}"
+          echo "2) probOfApplySQLActionToCreateResources: ${{ steps.run-migrated-script.outputs.probOfApplySQLActionToCreateResources }}"
+          echo "3) probOfRandomSampling: ${{ steps.run-migrated-script.outputs.probOfRandomSampling }}"
+          echo "4) baseTaintAnalysisProbability: ${{ steps.run-migrated-script.outputs.baseTaintAnalysisProbability }}"
+          echo "5) focusedSearchActivationTime: ${{ steps.run-migrated-script.outputs.focusedSearchActivationTime }}"
+
